syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Enum";


enum EHeroClassType
{
	EHERO_CLASS_TYPE_NONE = 0;
	EHERO_CLASS_TYPE_WARRIOR = 1;
	EHERO_CLASS_TYPE_ARCHER = 2;
	EHERO_CLASS_TYPE_MAGE = 3;
}

enum ECreateHeroResult
{
	ECREATE_HERO_RESULT_NONE = 0;
	ECREATE_HERO_RESULT_SUCCESS = 1;
	ECREATE_HERO_RESULT_FAIL_OVERLAP = 2;
	ECREATE_HERO_RESULT_FAIL_MINMAX = 3;
}

enum EObjectType
{
	EOBJECT_TYPE_NONE = 0;
	EOBJECT_TYPE_HERO = 1;
	EOBJECT_TYPE_MONSTER = 2;
	EOBJECT_TYPE_DROP_ITEM = 3;
	EOBJECT_TYPE_NPC = 4;
}

enum ECreatureState
{
	ECREATURE_STATE_IDLE = 0;
	ECREATURE_STATE_MOVE = 1;
	ECREATURE_STATE_SKILL = 2;
	ECREATURE_STATE_DIE = 3;
}

enum EMoveDir
{
	EMOVE_DIR_NONE = 0;
	EMOVE_DIR_UP = 1;
	EMOVE_DIR_UP_RIGHT = 2;
	EMOVE_DIR_RIGHT = 3;
	EMOVE_DIR_RIGHT_DOWN = 4;
	EMOVE_DIR_DOWN = 5;
	EMOVE_DIR_DOWN_LEFT = 6;
	EMOVE_DIR_LEFT = 7;
	EMOVE_DIR_LEFT_UP = 8;
}

enum ESkillType
{
	ESKILL_TYPE_NONE = 0;
	ESKILL_TYPE_NORMAL = 1;
    ESKILL_TYPE_ACTIVE = 2;
    ESKILL_TYPE_PASSIVE = 3;
}

enum ESkillFailReason
{
	ESKILL_FAIL_REASON_NONE = 0;
	ESKILL_FAIL_REASON_STUN = 1;
	ESKILL_FAIL_REASON_DIST = 2;
	ESKILL_FAIL_REASON_COST = 3;
	ESKILL_FAIL_REASON_COOL = 4;
}

enum EStatType
{
	ESTAT_TYPE_NONE = 0;
	ESTAT_TYPE_MAX_HP = 1;
	ESTAT_TYPE_MAX_MP = 2;
	ESTAT_TYPE_HP = 3;
	ESTAT_TYPE_MP = 4;
	ESTAT_TYPE_ATK = 5;
	ESTAT_TYPE_DEFENCE = 6;
	ESTAT_TYPE_MOVE_SPEED = 7;
	ESTAT_TYPE_ATK_SPEED = 8;
	ESTAT_TYPE_ADD_ATK_SPEED_MULTIPLIER = 9;
	ESTAT_TYPE_BASE_ATK_SPEED = 10;
}

enum EMoveType
{
	EMOVE_TYPE_NONE = 0;
	EMOVE_TYPE_CHASE = 1;
}

enum EMonsterGrade
{
	EMONSTER_GRADE_NONE = 0;
	EMONSTER_GRADE_NORMAL = 1;
	EMONSTER_GRADE_RARE = 2;
}

enum ETeleportType
{
	ETELEPORT_TYPE_NONE = 0;
	ETELEPORT_TYPE_RESPAWN = 1;
}

enum EItemType
{
	EITEM_TYPE_NONE = 0;
	EITEM_TYPE_EQUIP = 1;
	EITEM_TYPE_CONSUME = 2;
	EITEM_TYPE_ETC = 3;
}

enum EEquipItemType
{
	EEQUIP_ITEM_TYPE_NONE = 0;
	EEQUIP_ITEM_TYPE_WEAPON = 1;
	EEQUIP_ITEM_TYPE_SHIELD = 2;
	EEQUIP_ITEM_TYPE_HELMET = 3;
	EEQUIP_ITEM_TYPE_ARMOR = 4;
	EEQUIP_ITEM_TYPE_BOOTS = 5;
	EEQUIP_ITEM_TYPE_GLOVES = 6;
	EEQUIP_ITEM_TYPE_PENDANT = 7;
	EEQUIP_ITEM_TYPE_RING = 8;
}

enum ESlotType
{
	ESLOT_TYPE_NONE = 0;
	ESLOT_TYPE_WEAPON = 1;
	ESLOT_TYPE_SHIELD = 2;
	ESLOT_TYPE_HELMET = 3;
	ESLOT_TYPE_ARMOR = 4;
	ESLOT_TYPE_BOOTS = 5;
	ESLOT_TYPE_GLOVES = 6;
	ESLOT_TYPE_PENDANT = 7;
	ESLOT_TYPE_FIRST_RING = 8;
	ESLOT_TYPE_SECOND_RING = 9;
	ESLOT_TYPE_EQUIP = 100;
	ESLOT_TYPE_CONSUME = 200;
	ESLOT_TYPE_ETC = 300;
}

enum EPickupFailReason
{
	EPICKUP_FAIL_REASON_NONE = 0;
	EPICKUP_FAIL_REASON_NOT_MINE = 1;
	EPICKUP_FAIL_REASON_FULL = 2;
}

enum EAddItemType
{
	EADD_ITEM_TYPE_NEW = 0;
	EADD_ITEM_TYPE_OLD = 1;
}

enum EItemStatus
{
	EITEM_STATUS_NONE = 0;
	EITEM_STATUS_EQUIPPED = 1;
}

enum EConsumableType
{
	ECONSUMABLE_TYPE_NONE = 0;
	ECONSUMABLE_TYPE_HP = 1;
	ECONSUMABLE_TYPE_MP = 2;
}

enum EEffectType
{
	EEFFECT_TYPE_NONE = 0;
	EEFFECT_TYPE_DAMAGE = 1;
	EEFFECT_TYPE_HEAL = 2;
	EEFFECT_TYPE_ADDSTAT = 3;
}

enum EEffectDurationType
{
	EEFFECT_DURATION_TYPE_NONE = 0;
	EEFFECT_DURATION_TYPE_TEMPORARY = 1;
	EEFFECT_DURATION_TYPE_PERMANENT = 2;
}