syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Struct";

import "Enum.proto";

message LobbyHeroInfo 
{
	int32 level = 1;
	EHeroClassType classType = 2;
	string nickname = 3;
}

message HeroInfo
{
	LobbyHeroInfo lobbyHeroInfo = 1;
	CreatureInfo creatureInfo = 2;
}

message CreatureInfo
{
	ObjectInfo objectInfo = 1;
	StatInfo statInfo = 2;
}

message MyHeroInfo
{
	HeroInfo heroInfo = 1;
	int64 exp = 2;
	int32 gold = 3;
	int32 equipInvenSlotCount = 4;
	int32 consumeInvenSlotCount = 5;
	int32 etcInvenSlotCount = 6;
}

message StatInfo
{
	int32 hp = 1;
	int32 maxHp = 2;
	float moveSpeed = 3;
	float chaseSpeed = 4;
	int32 atkDamage = 5;
	int32 defence = 6;
	int32 mp = 7;
	int32 maxMp = 8;
}

message PosInfo
{
	float posX = 1;
	float posY = 2;
	float posZ = 3;
	float rotY = 4;
}


message ObjectInfo
{
	int32 objectId = 1;
	int32 templateId = 2;
	EObjectType objectType = 3;
	int32 roomId = 4;
	PosInfo posInfo = 5;
}

message ItemInfo
{
	int64 itemDbId = 1;
	int32 templateId = 2;
	int32 count = 3;
	ESlotType slotType = 4;
}

message SkillInfo
{
	int32 skillId = 1;
	int32 skillTargetId = 2;
	int32 skillLevel = 3;
    string playAnimName = 4;
}

message SkillLevelInfo
{
	int32 skillId = 1;
	int32 skillLevel = 2;
}

message SkillPointInfo
{
	int32 activeSkillPoint = 1;
	int32 passiveSkillPoint = 2;
}